# ecn_auv_lab

./: CMakeLists.txt
launch/: bluerov2_launch.py  ekf_launch.py  sim_launch.py
params/: cascaded_pid.yaml  noise.yaml
src/: gz2ekf.cpp
subject/: auv_lab.tex
urdf/: world_full.sdf
urdf/terrain/: terrain.xacro
